[gd_scene load_steps=2 format=3 uid="uid://dkc0gbf2x0js0"]

[ext_resource type="Script" path="res://src/scripts/level_picker.gd" id="1_aq2m0"]

[node name="LevelPicker" type="CanvasLayer"]
script = ExtResource("1_aq2m0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
offset_right = 180.0
offset_bottom = 195.0
scale = Vector2(1, 0.92)
size_flags_horizontal = 4

[node name="Titel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "Spyte"

[node name="Version" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 8
text = "Version 0.1"

[node name="Level1" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Level 1"

[node name="Level2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level 2"

[node name="Level3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level 3"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back
"

[connection signal="pressed" from="VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
